JWT token response is added in LoginResponseDTO object. SekretKey in properties

--- a/application.properties
+++ b/application.properties
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 jwt.token = pdeanhkakeopbmioenhoamjosanhapoenbdgz
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate=DEBUG
+
+jwt.signing.key = fjdkfJFgjfdfehf67f8fFHdjfndjfFHJFHF67892343FJF77FFF99DfFFFF
