ADD Conflict exceptino for auth registration when username already in db

--- a/application.properties
+++ b/application.properties
@@ -9,3 +9,5 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate=DEBUG
 
 jwt.signing.key = fjdkfJFgjfdfehf67f8fFHdjfndjfFHJFHF67892343FJF77FFF99DfFFFF
+
+server.error.include-message=always
