introducing swagger documentation, improving Book exceptions

--- a/application.properties
+++ b/application.properties
@@ -11,3 +11,5 @@ logging.level.org.hibernate=DEBUG
 jwt.signing.key = fjdkfJFgjfdfehf67f8fFHdjfndjfFHJFHF67892343FJF77FFF99DfFFFF
 
 server.error.include-message=always
+
+springdoc.api-docs.path=/api-docs
