--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/springlib
-spring.datasource.username=root
-spring.datasource.password=Calathea137!
+spring.datasource.username=app
+spring.datasource.password=pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 jwt.token = pdeanhkakeopbmioenhoamjosanhapoenbdgz
